pkl-core/src/test/files/LanguageSnippetTests/input/errors/power/typeConstraints5.pkl
foo: String(isCapitalized) = "hello"

local isCapitalized = (it: String) -> it == it.capitalize() 
